// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`additional props are passed through 1`] = `
<Link
  action={{}}
  className="foo"
  store={
    {
      "dispatch": [MockFunction],
      "pathForAction": [MockFunction] {
        "calls": [
          [
            {},
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": "/my/path",
          },
        ],
      },
    }
  }
>
  <a
    className="foo"
    href="/my/path"
    onClick={[Function]}
    store={
      {
        "dispatch": [MockFunction],
        "pathForAction": [MockFunction] {
          "calls": [
            [
              {},
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": "/my/path",
            },
          ],
        },
      }
    }
  >
    Hello World!
  </a>
</Link>
`;

exports[`renders the url calculated by our internal function 1`] = `
<Link
  action={{}}
  store={
    {
      "dispatch": [MockFunction],
      "pathForAction": [MockFunction] {
        "calls": [
          [
            {},
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": "/my/path",
          },
        ],
      },
    }
  }
>
  <a
    href="/my/path"
    onClick={[Function]}
    store={
      {
        "dispatch": [MockFunction],
        "pathForAction": [MockFunction] {
          "calls": [
            [
              {},
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": "/my/path",
            },
          ],
        },
      }
    }
  >
    Hello World!
  </a>
</Link>
`;
